src/objects/IOTAction__x.object
<CustomObject>
    <description>IOTAction</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$iot_action</externalName>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IOTAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_mechanism__c</fullName>
        <externalDeveloperName>c_delivery_mechanism</externalDeveloperName>
        <label>Delivery mechanism</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Id__c</fullName>
        <externalDeveloperName>c_offer_id</externalDeveloperName>
        <label>Offer Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ucp_guest_id__c</fullName>
        <externalDeveloperName>c_ucp_guest_id</externalDeveloperName>
        <label>Ucp guest id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>b_suppressed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>b_suppressed</description>
        <externalDeveloperName>b_suppressed</externalDeveloperName>
        <label>b_suppressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_suppressed_by_cd__c</fullName>
        <description>c_suppressed_by_cd</description>
        <externalDeveloperName>c_suppressed_by_cd</externalDeveloperName>
        <label>c_suppressed_by_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_suppression_comment__c</fullName>
        <description>c_suppression_comment</description>
        <externalDeveloperName>c_suppression_comment</externalDeveloperName>
        <label>c_suppression_comment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_created_date__c</fullName>
        <description>d_created_date</description>
        <externalDeveloperName>d_created_date</externalDeveloperName>
        <label>d_created_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IOT Action</label>
    <pluralLabel>IOT Actions</pluralLabel>
</CustomObject>